--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
             </div>
             <div class="menu-btn" onclick="toggleMenu()">☰</div>
             <div class="level-badge">LEVEL <span id="level-display">1</span></div>
-            <h2 style="margin: 0;">戒飲料大作戰</h2>
+            <h2 style="margin: 0;">萊西戒飲料</h2>
             <div id="date-display" style="font-size: 0.9em; opacity: 0.8; margin-top: 5px;"></div>
         </div>
 
